# TrackGuide-MDR-Demo

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  script.js
client/: client.py  coordinateSender_pb2.py  coordinateSender_pb2_grpc.py
proto/: coordinateSender.proto
server/: coordinateSender_grpc_pb.js  coordinateSender_pb.js  server.js
src/: main.py
src/backend/seriallib/: nmeareader.py
src/backend/seriallib/dataclasses/: serialconfig.py
src/frontend/tui/: tui.py
